--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "react-bootstrap": "^1.0.0-beta.10",
     "react-dom": "^16.8.6",
     "react-rating": "^1.7.2",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "react-router": "^5.1.2",
+    "react-router-dom": "^5.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
